modified:   package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://trying.github.io/",
+  "homepage": "https://thying.github.io/sip_k2_s2_l6/",
   "name": "sip_k2_s2_l6",
   "version": "0.1.0",
   "private": true,
